# edc-web-ui

./: .gitignore  Cargo.toml  Dockerfile  README.md  Trunk.toml  index.html  package.json
.github/workflows/: ci.yml
nginx/: default.conf
patches/: @patternfly+patternfly+5.4.2.patch
src/: components.rs  contexts.rs  lib.rs  main.rs  models.rs  pages.rs
src/components/: atomic_constraint_edit.rs  create_asset.rs  create_contract_definition.rs  create_contract_negotiation.rs  create_policy.rs  create_transfer_process.rs  criterion_edit.rs  list_assets.rs  list_contract_agreements.rs  list_contract_definitions.rs  list_contract_negotiations.rs  list_of_rules.rs  list_offers.rs  list_policies.rs  list_transfer_processes.rs  policy_selector.rs  rule.rs  simple_or_id_field.rs
src/components/list_offers/: dataset_or_service_card.rs  offer_gallery.rs
src/contexts/: edc_connector_context.rs
src/models/: asset_item.rs  contract_agreement_item.rs  contract_definition_item.rs  contract_negotiation_item.rs  contract_negotiation_kind.rs  contract_negotiation_state.rs  policy_definition.rs  policy_kind.rs  transfer_process_item.rs  transfer_process_kind.rs  transfer_process_state.rs
src/pages/: asset_page.rs  contract_agreement_page.rs  contract_definition_page.rs  contract_negotiation_page.rs  policy_page.rs  transfer_process_page.rs
testing-docker-compose/: docker-compose.yml
testing-docker-compose/conf/: configuration.json  nginx-default.conf
testing-docker-compose/conf/connector/: vault.properties
