[package]
name = "edc-web-ui"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description= "A Rust Web interface with patternfly-yew client for EDC"
repository = "https://github.com/dataspace-rs/edc-web-ui"
keywords = ["dataspace", "http"]
categories = []
readme = "README.md"

[dependencies]
console_error_panic_hook = "0.1"
console_log = "1"
edc-connector-client = {  version = "0.4.1", git = "https://github.com/luminvent/edc-rs.git", branch = "feat/improve_catalog" }
fern = "0.7"
log = "0.4.27"
patternfly-yew = { version = "0.6", features = ["experimental"] }
reqwest = { version="0.12",  features= ["json"]}
serde_json = "1"
strum = { version = "0.27", features = ["derive"] }
stylist = { version = "0.13", features = ["macros", "yew_integration"] }
wasm-cookies = "0.2"
web-sys = "0.3"
yew = "0.21"
yew_icons = { version = "0.8", features = ["BootstrapGrid3X3GapFill", "BootstrapListUl"] }
yew-router = "0.18"
serde = { version = "1.0.219", features = ["derive"] }

[build-dependencies]
built = "0.8"
