[package]
name = "edc-web-ui"
version = "0.2.1"
edition = "2024"
license = "Apache-2.0"
description= "A Rust Web interface with patternfly-yew client for EDC"
repository = "https://github.com/dataspace-rs/edc-web-ui"
keywords = ["dataspace", "http"]
categories = []
readme = "README.md"

[dependencies]
chrono = "0.4"
console_error_panic_hook = "0.1"
console_log = "1"
edc-connector-client = { version = "0.5.2", package = "edc-connector-client-next" }
fern = "0.7"
log = "0.4.27"
patternfly-yew = { version = "0.7", features = ["experimental"] }
reqwest = { version = "0.12",  features= ["json"] }
serde_json = "1"
strum = { version = "0.28", features = ["derive"] }
wasm-cookies = "0.2"
web-sys = "0.3"
yew = "0.22"
yew_icons = { version = "0.9.0", features = ["font_awesome_regular"] }
yew-nested-router = { version = "0.8.0" }
serde = { version = "1.0.219", features = ["derive"] }
gloo-utils = "0.2.0"

[build-dependencies]
built = "0.8"
